--- a/Netflix.ipynb
+++ b/Netflix.ipynb
@@ -229,6 +229,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Con esto se tendrá una buena idea de con que tipos de datos se estará tratando, que columnas requieren limpieza o transformaciones y que otros datos se pueden extraer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.2 Guardar las variables en una lista"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
