--- a/Netflix.ipynb
+++ b/Netflix.ipynb
@@ -243,6 +243,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esto se hace con el fin de tener un fácil acceso a las diferentes columnas del conjunto de datos, principalmente cuando se quieren hacer las mismas transformaciones en diferentes subconjuntos de columnas."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -273,6 +280,37 @@
     "# Trayendo las columnas del conjunto de datos\n",
     "columns = list(netflix_titles.columns)\n",
     "columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.3 Anota los posibles problemas que se tendrán que abordar en cada columna."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para mantenerse organizado, hay que observar los problemas que ve en su subconjunto de datos, algunas cosas a notar son:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Hay algunas columnas con datos faltantes.\n",
+    "- Hay columnas con palabras y números, como date_added y duration.\n",
+    "- Hay 2 columnas con varias palabras distintas unidas por una coma.\n",
+    "- Es posible que a otras columnas les falten valores."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Paso 2. Observar la proporcion de datos faltantes."
    ]
   },
   {
@@ -307,6 +345,30 @@
     "print(\"Missing values distribution: \")\n",
     "print(netflix_titles.isnull().mean())\n",
     "print(\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Por este fragmento de código podemos observar la distribución de los valores faltantes en el conjunto de datos, para así tener una buena idea de en que columnas se necesitara trabajar para resolver el problema de los valores faltantes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A partir del resultado, esto es lo que se puede recopilar:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- La columna director tiene el porcentaje más alto de datos faltantes con un 30%\n",
+    "- La columna cast y country tienen un porcentaje considerable de datos faltantes con un 9%\n",
+    "- A date_added, rating y duration le faltan únicamente 0%-0,1%\n",
+    "- La mayoría de las demás columnas no están vacías."
    ]
   },
   {
