--- a/Netflix.ipynb
+++ b/Netflix.ipynb
@@ -11,6 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Todo lo explicado en este notebook pertenece al artículo How to Clean Your Data in Python de Huong Ngo, por lo cual anexo el enlace a este mismo. Adem&aacute;s tambi&eacute;n adjunto el enlace de donde sali&oacute; el conjunto de datos.\n",
+    "<p>Click para ver el art&iacute;culo <a href=\"https://towardsdatascience.com/how-to-clean-your-data-in-python-8f178638b98d\">How to Clean your Data</a>.</p>\n",
+    "<p>Click para descargar el conjunto de datos <a href=\"https://www.kaggle.com/datasets/shivamb/netflix-shows\">Netflix Movies and TV Shows Dataset</a>.</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "El artículo es creado como punto de partida para aprender a limpiar los datos de forma eficiente para así utilizarlo en proyectos personales. Además, se trabajará con el conjunto de datos de películas y programas de televisión en Netflix, el cual presenta ciertas inconsistencias y datos faltantes."
    ]
   },
@@ -23,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +225,7 @@
        "4  In a city of coaching centers known to train I...  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +280,7 @@
        " 'description']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +726,7 @@
        "4  In a city of coaching centers known to train I...  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +1003,7 @@
        "4  After most of her family is murdered in a terr...  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1069,7 @@
        "       'TV-Y7-FV', 'UR'], dtype=object)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1072,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1091,7 @@
        "       'TV-Y7-FV'], dtype=object)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1101,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1177,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1235,12 +1244,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ages0\\AppData\\Local\\Temp\\ipykernel_2332\\1591530863.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\ages0\\AppData\\Local\\Temp\\ipykernel_300\\3148512868.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  netflix_films['length'].iloc[i] = length\n",
-      "C:\\Users\\ages0\\AppData\\Local\\Temp\\ipykernel_2332\\1591530863.py:9: SettingWithCopyWarning: \n",
+      "C:\\Users\\ages0\\AppData\\Local\\Temp\\ipykernel_300\\3148512868.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1274,14 +1283,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ages0\\AppData\\Local\\Temp\\ipykernel_2332\\3877169165.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\ages0\\AppData\\Local\\Temp\\ipykernel_300\\2767565248.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1295,7 +1304,7 @@
        "       'TV-Y7', 'G', 'NC-17', 'NR', '', 'TV-Y7-FV'], dtype=object)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1323,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1350,142 +1359,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['',\n",
-       " 'Netherlands',\n",
-       " 'Azerbaijan',\n",
-       " 'Mongolia',\n",
-       " 'Uganda',\n",
-       " 'Singapore',\n",
-       " 'Croatia',\n",
-       " 'Samoa',\n",
-       " 'Colombia',\n",
-       " 'United States,',\n",
-       " 'Latvia',\n",
-       " 'Botswana',\n",
-       " 'Luxembourg',\n",
-       " 'Iran',\n",
-       " 'Venezuela',\n",
-       " 'Mauritius',\n",
-       " 'Albania',\n",
-       " 'Liechtenstein',\n",
-       " 'Sudan',\n",
-       " 'Belarus',\n",
-       " 'Portugal',\n",
-       " 'Ireland',\n",
-       " 'West Germany',\n",
-       " 'Chile',\n",
-       " 'Hong Kong',\n",
-       " 'Pakistan',\n",
-       " 'Algeria',\n",
-       " 'Cameroon',\n",
-       " 'Nepal',\n",
-       " 'Egypt',\n",
-       " 'Senegal',\n",
-       " 'Cuba',\n",
-       " 'United Kingdom',\n",
-       " 'Peru',\n",
-       " 'Poland',\n",
-       " 'Montenegro',\n",
-       " 'Mexico',\n",
-       " 'Jamaica',\n",
-       " 'Sweden',\n",
-       " 'Burkina Faso',\n",
-       " 'Iraq',\n",
-       " 'Germany',\n",
-       " 'Romania',\n",
-       " 'Malawi',\n",
-       " 'Sri Lanka',\n",
-       " 'Vatican City',\n",
-       " 'Bangladesh',\n",
-       " 'Cambodia,',\n",
-       " 'Iceland',\n",
-       " 'Canada',\n",
-       " 'Mozambique',\n",
-       " 'Morocco',\n",
-       " 'China',\n",
-       " 'Palestine',\n",
-       " 'Cyprus',\n",
-       " 'Kazakhstan',\n",
-       " 'Bulgaria',\n",
-       " 'Switzerland',\n",
-       " 'Georgia',\n",
-       " 'Hungary',\n",
-       " 'Ecuador',\n",
-       " 'Denmark',\n",
-       " 'Bahamas',\n",
-       " 'Serbia',\n",
-       " 'Nigeria',\n",
-       " 'Israel',\n",
-       " 'Argentina',\n",
-       " 'France',\n",
-       " 'Poland,',\n",
-       " 'Czech Republic',\n",
-       " 'South Korea',\n",
-       " 'Zimbabwe',\n",
-       " 'Slovenia',\n",
-       " 'Malaysia',\n",
-       " 'Italy',\n",
-       " 'Guatemala',\n",
-       " 'Paraguay',\n",
-       " 'United Kingdom,',\n",
-       " 'Jordan',\n",
-       " 'Finland',\n",
-       " 'Taiwan',\n",
-       " 'Uruguay',\n",
-       " 'Qatar',\n",
-       " 'Ukraine',\n",
-       " 'Soviet Union',\n",
-       " 'Namibia',\n",
-       " 'Bermuda',\n",
-       " 'Lithuania',\n",
-       " 'East Germany',\n",
-       " 'Puerto Rico',\n",
-       " 'United Arab Emirates',\n",
-       " 'Armenia',\n",
-       " 'Saudi Arabia',\n",
-       " 'Afghanistan',\n",
-       " 'Australia',\n",
-       " 'Cayman Islands',\n",
-       " 'Panama',\n",
-       " 'Lebanon',\n",
-       " 'Nicaragua',\n",
-       " 'Kuwait',\n",
-       " 'Malta',\n",
-       " 'South Africa',\n",
-       " 'Thailand',\n",
-       " 'Russia',\n",
-       " 'Greece',\n",
-       " 'Japan',\n",
-       " 'Dominican Republic',\n",
-       " 'New Zealand',\n",
-       " 'Brazil',\n",
-       " 'Cambodia',\n",
-       " 'Kenya',\n",
-       " 'Angola',\n",
-       " 'Vietnam',\n",
-       " 'Turkey',\n",
-       " 'Syria',\n",
-       " 'Spain',\n",
-       " 'Ethiopia',\n",
-       " 'Ghana',\n",
-       " 'Norway',\n",
-       " 'Somalia',\n",
-       " 'India',\n",
-       " 'Philippines',\n",
-       " 'Indonesia',\n",
-       " 'Slovakia',\n",
-       " 'Austria',\n",
        " 'United States',\n",
-       " 'Belgium']"
+       " 'Brazil',\n",
+       " 'France',\n",
+       " 'Cambodia',\n",
+       " 'Portugal',\n",
+       " 'Luxembourg',\n",
+       " 'Syria',\n",
+       " 'Poland,',\n",
+       " 'Cyprus',\n",
+       " 'Peru',\n",
+       " 'Morocco',\n",
+       " 'Russia',\n",
+       " 'Ukraine',\n",
+       " 'Greece',\n",
+       " 'Cayman Islands',\n",
+       " 'Japan',\n",
+       " 'Kenya',\n",
+       " 'Lebanon',\n",
+       " 'Nepal',\n",
+       " 'United Arab Emirates',\n",
+       " 'Ecuador',\n",
+       " 'Ghana',\n",
+       " 'Finland',\n",
+       " 'South Korea',\n",
+       " 'Iceland',\n",
+       " 'Switzerland',\n",
+       " 'United States,',\n",
+       " 'Iraq',\n",
+       " 'United Kingdom,',\n",
+       " 'Singapore',\n",
+       " 'Ireland',\n",
+       " 'Iran',\n",
+       " 'Argentina',\n",
+       " 'Nicaragua',\n",
+       " 'Venezuela',\n",
+       " 'Pakistan',\n",
+       " 'India',\n",
+       " 'Mexico',\n",
+       " 'Algeria',\n",
+       " 'Montenegro',\n",
+       " 'Germany',\n",
+       " 'Qatar',\n",
+       " 'Poland',\n",
+       " 'Chile',\n",
+       " 'Vietnam',\n",
+       " 'Cambodia,',\n",
+       " 'Puerto Rico',\n",
+       " 'Burkina Faso',\n",
+       " 'Hungary',\n",
+       " 'Mongolia',\n",
+       " 'Vatican City',\n",
+       " 'Colombia',\n",
+       " 'Somalia',\n",
+       " 'Uganda',\n",
+       " 'Taiwan',\n",
+       " 'Italy',\n",
+       " 'Turkey',\n",
+       " 'Norway',\n",
+       " 'Canada',\n",
+       " 'Malawi',\n",
+       " 'Lithuania',\n",
+       " 'Nigeria',\n",
+       " 'Senegal',\n",
+       " 'Egypt',\n",
+       " 'China',\n",
+       " 'Slovakia',\n",
+       " 'Australia',\n",
+       " 'Bahamas',\n",
+       " 'Indonesia',\n",
+       " 'Kazakhstan',\n",
+       " 'Hong Kong',\n",
+       " 'Botswana',\n",
+       " 'Cameroon',\n",
+       " 'United Kingdom',\n",
+       " 'Slovenia',\n",
+       " 'Denmark',\n",
+       " 'Panama',\n",
+       " 'Zimbabwe',\n",
+       " 'Czech Republic',\n",
+       " 'Afghanistan',\n",
+       " 'Croatia',\n",
+       " 'Albania',\n",
+       " 'Azerbaijan',\n",
+       " 'Sweden',\n",
+       " 'Sri Lanka',\n",
+       " 'Israel',\n",
+       " 'Mauritius',\n",
+       " 'Jamaica',\n",
+       " 'Angola',\n",
+       " 'Philippines',\n",
+       " 'Spain',\n",
+       " 'Serbia',\n",
+       " 'New Zealand',\n",
+       " 'Thailand',\n",
+       " 'Bermuda',\n",
+       " 'Namibia',\n",
+       " 'Paraguay',\n",
+       " 'Cuba',\n",
+       " 'Dominican Republic',\n",
+       " 'Malaysia',\n",
+       " 'Palestine',\n",
+       " 'Samoa',\n",
+       " 'Belgium',\n",
+       " 'Mozambique',\n",
+       " 'Bulgaria',\n",
+       " 'Belarus',\n",
+       " 'Saudi Arabia',\n",
+       " 'Netherlands',\n",
+       " 'Austria',\n",
+       " 'Sudan',\n",
+       " 'Ethiopia',\n",
+       " 'Guatemala',\n",
+       " 'Armenia',\n",
+       " 'Uruguay',\n",
+       " 'Bangladesh',\n",
+       " 'Romania',\n",
+       " 'South Africa',\n",
+       " 'Liechtenstein',\n",
+       " 'Jordan',\n",
+       " 'Georgia',\n",
+       " 'Latvia',\n",
+       " 'Kuwait',\n",
+       " 'Malta']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1500,7 +1506,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Examinemos la lista de países únicos para ver si hay inconsistencias o errores, nos encontramos con lo siguiente:\n",
+    "Examinemos la lista de países únicos para ver si hay inconsistencias o errores, se puede encontrar en la lista general lo siguiente:\n",
     "\n",
     "- Están tanto la Unión Soviética como Rusia.\n",
     "- Están tanto Alemania Oriental/Occidental como Alemania\n",
@@ -1510,14 +1516,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ages0\\AppData\\Local\\Temp\\ipykernel_2332\\1037538766.py:10: SettingWithCopyWarning: \n",
+      "C:\\Users\\ages0\\AppData\\Local\\Temp\\ipykernel_300\\4280642800.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1547,35 +1553,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Music & Musicals',\n",
-       " 'Horror Movies',\n",
-       " 'Thrillers',\n",
-       " 'Comedies',\n",
-       " 'Children & Family Movies',\n",
-       " 'International Movies',\n",
-       " 'Documentaries',\n",
+       "['Children & Family Movies',\n",
        " 'Movies',\n",
        " 'Anime Features',\n",
-       " 'Independent Movies',\n",
-       " 'Romantic Movies',\n",
-       " 'LGBTQ Movies',\n",
-       " 'Sci-Fi & Fantasy',\n",
-       " 'Action & Adventure',\n",
        " 'Sports Movies',\n",
        " 'Classic Movies',\n",
-       " 'Dramas',\n",
-       " 'Stand-Up Comedy',\n",
+       " 'Documentaries',\n",
        " 'Faith & Spirituality',\n",
-       " 'Cult Movies']"
+       " 'Dramas',\n",
+       " 'Music & Musicals',\n",
+       " 'Romantic Movies',\n",
+       " 'Sci-Fi & Fantasy',\n",
+       " 'Action & Adventure',\n",
+       " 'LGBTQ Movies',\n",
+       " 'International Movies',\n",
+       " 'Horror Movies',\n",
+       " 'Stand-Up Comedy',\n",
+       " 'Cult Movies',\n",
+       " 'Thrillers',\n",
+       " 'Independent Movies',\n",
+       " 'Comedies']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1588,37 +1594,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['International TV Shows',\n",
-       " 'TV Horror',\n",
+       "['TV Dramas',\n",
+       " 'Anime Series',\n",
+       " 'TV Shows',\n",
+       " 'TV Thrillers',\n",
+       " 'TV Sci-Fi & Fantasy',\n",
        " 'Stand-Up Comedy & Talk Shows',\n",
-       " 'TV Action & Adventure',\n",
+       " \"Kids' TV\",\n",
+       " 'Spanish-Language TV Shows',\n",
+       " 'TV Mysteries',\n",
+       " 'British TV Shows',\n",
+       " 'TV Comedies',\n",
+       " 'Reality TV',\n",
+       " 'Korean TV Shows',\n",
+       " 'TV Horror',\n",
+       " 'Science & Nature TV',\n",
        " 'Docuseries',\n",
        " 'Teen TV Shows',\n",
-       " 'TV Mysteries',\n",
-       " 'TV Sci-Fi & Fantasy',\n",
-       " 'Korean TV Shows',\n",
        " 'Classic & Cult TV',\n",
-       " 'Science & Nature TV',\n",
-       " 'TV Dramas',\n",
-       " 'Crime TV Shows',\n",
-       " 'Anime Series',\n",
-       " 'TV Comedies',\n",
        " 'Romantic TV Shows',\n",
-       " 'TV Thrillers',\n",
-       " 'TV Shows',\n",
-       " 'British TV Shows',\n",
-       " 'Spanish-Language TV Shows',\n",
-       " \"Kids' TV\",\n",
-       " 'Reality TV']"
+       " 'Crime TV Shows',\n",
+       " 'International TV Shows',\n",
+       " 'TV Action & Adventure']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1640,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1677,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1844,7 +1850,7 @@
        "452  TV Shows  This collection includes 12 World War II-era p...  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1856,7 +1862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2023,7 +2029,7 @@
        "452  This documentary chronicles the largely forgot...  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2040,15 +2046,6 @@
     "Al observar las filas, ahora se puede ver que el género “Programas de TV” y “Películas” se usó para indicar que estos contenidos no tenían un género en primer lugar. Entendiendo lo que esto significa, se puede optar por excluirlo o incluirlo en el análisis, en este caso, se eligió incluirlo porque no afecta el análisis.\n",
     "\n",
     "Aunque este paso es tedioso, también es muy importante ya que nos permite encontrar los problemas en nuestro conjunto de datos que están ocultos a primera vista."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Todo lo explicado en este notebook pertenece al artículo How to Clean Your Data in Python de Huong Ngo, por lo cual anexo el enlace a este mismo\n",
-    "\n",
-    "https://towardsdatascience.com/how-to-clean-your-data-in-python-8f178638b98d"
    ]
   }
  ],
